--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "installoop": "^1.1.0",
     "joi": "~17.12.1",
     "node-os-utils": "~1.3.7",
+    "object-mapper": "^6.2.0",
     "ora": "~5.4.1",
     "pidusage": "~3.0.2",
     "reflect-metadata": "~0.1.14",
@@ -99,6 +100,7 @@
     "@types/express": "~4.17.21",
     "@types/node": "~20.11.16",
     "@types/node-os-utils": "~1.3.4",
+    "@types/object-mapper": "^6.2.2",
     "@types/pidusage": "~2.0.5",
     "@types/semver": "^7.5.6",
     "@types/swagger-ui-express": "~4.1.6",
