--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "envalid": "^8.0.0",
     "express": "^4.18.2",
     "fast-folder-size": "~2.2.0",
+    "filesize": "^10.1.6",
     "fs": "~0.0.1-security",
     "http-status-codes": "~2.3.0",
     "image-hash": "~5.3.2",
