feat(bot): :recycle: merge Xbox and Epic tables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,7 +56,9 @@
 
 			"@/api/server": ["src/api/server.ts"],
 
-			"@/env": ["src/utils/types/environment.ts"]
+			"@/env": ["src/utils/types/environment.ts"],
+			"@/constants": ["src/utils/types/constants.ts"],
+
 		}
 	},
 
