--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           host: ${{ secrets.IP }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          # key: ${{ secrets.KEY }}
+          # password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.KEY }}
           # passphrase: ${{ secrets.PASSPHRASE }}
           port: ${{ secrets.PORT }}
           envs: PROJECT_PATH
           script: |
             cd $PROJECT_PATH
-            git pull https://github.com/barthofu/tscord-template.git main
+            git pull https://github.com/rasouza/steammy-bot.git main
             docker-compose up -d --build
